# fanqie-downloader-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: api.rs  batch.rs  cli.rs  config.rs  downloader.rs  error.rs  export.rs  lib.rs  main.rs  search.rs  utils.rs
src/utils/: rate_limiter.rs
