[package]
name = "rs-fanqie-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Fanqie Novel Downloader Rust Team"]
description = "A fast and efficient Fanqie novel downloader written in Rust"
license = "MIT"
repository = "https://github.com/POf-L/Fanqie-novel-Downloader"
keywords = ["novel", "downloader", "fanqie", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fqdl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "color"] }
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
console = "0.15"
once_cell = "1.19"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
url = "2.5"
regex = "1.10"
dirs = "5.0"
toml = "0.8"
epub-builder = "0.7"
html-escape = "0.2"
textwrap = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
