[package]
name = "fqdl"
version = "0.1.0"
edition = "2021"
authors = ["Fanqie Novel Downloader Rust Team"]
description = "A fast and efficient Fanqie novel downloader written in Rust"
license = "MIT"
repository = "https://github.com/dkfghrdso/fanqie-downloader-rs"
keywords = ["novel", "downloader", "fanqie", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/dkfghrdso/fanqie-downloader-rs"

[[bin]]
name = "fqdl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "color"] }
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
console = "0.15"
once_cell = "1.19"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
url = "2.5"
regex = "1.10"
dirs = "5.0"
toml = "0.8"
epub-builder = "0.7"
html-escape = "0.2"
textwrap = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.deb]
maintainer = "Fanqie Novel Downloader Rust Team <dkfghrdso@users.noreply.github.com>"
copyright = "2026, Fanqie Novel Downloader Rust Team"
license-file = ["LICENSE", "0"]
extended-description = """\
A fast and efficient Fanqie novel downloader written in Rust.
Supports searching, downloading, and exporting novels in TXT and EPUB formats."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/fqdl", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fqdl/", "644"],
    ["config/fanqie.json", "etc/fqdl/", "644"],
]

[package.metadata.rpm]
package = "fqdl"
license = "MIT"
summary = "A fast and efficient Fanqie novel downloader"
url = "https://github.com/dkfghrdso/fanqie-downloader-rs"

[package.metadata.rpm.files]
"target/release/fqdl" = { path = "/usr/bin/fqdl", mode = "755" }
"README.md" = { path = "/usr/share/doc/fqdl/README.md", mode = "644" }
"config/fanqie.json" = { path = "/etc/fqdl/fanqie.json", mode = "644" }

[package.metadata.rpm.cargo]
buildflags = ["--release"]
